fixed flex boxes and text alignment on Maps You Made section

--- a/assets/maps.css
+++ b/assets/maps.css
@@ -8,6 +8,12 @@ h4{
 .flex1 {
   flex: 1;
 }
+.flex3 {
+  flex: 3;
+}
+.left {
+  text-align: left;
+}
 /*sets sizes for grey boxes*/
 .item-outer-box {
   height: 50px;
@@ -45,8 +51,9 @@ background-color: rgba(250, 250, 250, .7);
   max-width: 200px;
   max-height: 200px;
   margin:10px;
+  text-align:left;
 }
-/*class to link movable items from- changes how moving so now only in use to keep buttons below matching tokens*/
+/*class to link movable items from- I changed changed my drag function so now only in use to keep buttons below matching tokens*/
   .mymapdiv {
     position: absolute;
     z-index: 9;
@@ -89,7 +96,7 @@ background-color: rgba(250, 250, 250, .7);
 
   }
   .map-zone {
-    min-height: 800px;
+    min-height: 700px;
   }
 
   /*Token buttons*/
